Update README.md with information on latest bug.

--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,6 @@ footer {
   font-weight: bold;
 }
 
-/* #results, .python, .ruby, .swift, .csharp {
+#results, .python, .ruby, .swift, .csharp {
   display: none;
-} */
+}
